# dig-music

./: .gitignore  Cargo.toml  README.md  index.html  main.ipynb  output.css  package-lock.json  package.json  pyproject.toml  styles.css  test.csv
app/: package-lock.json  package.json
app/old/: package-lock.json  package.json
app/old/frontend/: index.html  main.js
app/old/src-tauri/: Cargo.toml
app/old/src-tauri/src/: app_state.rs  data.rs
app/old/src-tauri/src/commands/: file_dialog.rs
app/old/src-tauri/src/data/: group.rs
app/src/: App.jsx  SideBar.jsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/FilterMenu/: Title.jsx
cli/: Cargo.toml
cli/src/: args.rs  help.rs  main.rs  spot.rs  spotify.rs
cli/src/spotify/: analysis_type.rs  csv.rs
deep-spotify/: Cargo.toml
deep-spotify/src/: data.rs
deep-spotify/src/data/: load.rs
dig-music/: Cargo.toml
dig-music/src/: aggregate.rs  error.rs  group.rs  lib.rs  load.rs  play.rs
dig-music/src/error/: key_generate.rs
dig-music/src/group/: album.rs  artist.rs  episode.rs  podcast.rs  song.rs
frontend/: index.html  main.js
lib/: Cargo.toml
lib/src/: aggregate.rs  columns.rs  error.rs  filter.rs  fs.rs  group.rs  lib.rs  load.rs  meta.rs  play.rs  sort.rs
lib/src/filter/: operand_trait.rs  parse.rs
lib/src/fs/: load.rs  store.rs
lib/src/group/: album.rs  artist.rs  episode.rs  song.rs
old/: tailwind.config.js
old/src-tauri/: tauri.conf.json
old_rs/lib/src/: aggregate.rs  group.rs
old_rs/lib/src/group/: episode.rs  podcast.rs
old_rs/scratchpad/src/: find_song.py  main.rs  scripts.rs
old_rs/scratchpad/src/scripts/: find_song.rs  top_intersecting.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs  scripts.rs
scratchpad/src/scripts/: top_intersecting.rs
src/: App.jsx  SideBar.jsx  app.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  data.rs  lib.rs  main.rs
src-tauri/src/commands/: file_dialog.rs
src-tauri/src/data/: play.rs
test-data/MyData/: Streaming_History_Audio_2023_10.json  Streaming_History_Video_2017-2023.json
