[package]
name = "dig-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
polars.workspace = true
rayon.workspace = true
thiserror.workspace = true
color-eyre = "~0.6"
dig-music-lib = { version = "0.1", path = "../lib" }
eyre = "~0.6"
