[package]
name = "dig-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0.4"
# polars = "~0.32"
rayon = "~1.7"
regex = "~1.9"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "~3.3", features = ["chrono_0_4"] }
zip = "~0.6"
