[package]
name = "dig-music-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0.4"
clap = { version = "~4.4", features = ["derive"] }
md5 = "0.7.0"
polars = { version = "~0.32", features = ["csv", "json", "lazy"] }
rayon = "~1.8"
regex = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "~3.4", features = ["chrono_0_4"] }
thiserror = "~1.0"
zip = "~0.6"
