[package]
name = "dig-music-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
polars.workspace = true
rayon.workspace = true
thiserror.workspace = true
chrono = "~0.4"
md5 = "0.7.0"
regex = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "~3.4", features = ["chrono_0_4"] }
zip = "~0.6"
rspotify = "0.12.0"
