[package]
name = "diglib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0.4"
md5 = "0.7.0"
rayon = "~1.10"
regex = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "~3.7", features = ["chrono_0_4"] }
thiserror = "~1.0"
zip = "~0.6"
